--- a/HistoriaClinicaPagina/Medilab/index.html
+++ b/HistoriaClinicaPagina/Medilab/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-  <!--banner-->
+  <!--banner123-->
   <section id="banner" class="banner">
     <div class="bg-color">
       <nav class="navbar navbar-default navbar-fixed-top">
