Cambio de imagen de fondo de banner, se añadió información y modificación de banner

--- a/HistoriaClinicaPagina/Medilab/index.html
+++ b/HistoriaClinicaPagina/Medilab/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Medilab Free Bootstrap HTML5 Template</title>
+  <title>DentaClick</title>
   <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
   <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
@@ -33,15 +33,15 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				      </button>
-              <a class="navbar-brand" href="#"><img src="img/logo2.png" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
+              <a class="navbar-brand" href="#"><img src="img/logobanner.png" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#banner">Home</a></li>
-                <li class=""><a href="#service">Services</a></li>
-                <li class=""><a href="#about">About</a></li>
-                <li class=""><a href="#testimonial">Testimonial</a></li>
-                <li class=""><a href="#contact">Contact</a></li>
+                <li class=""><a href="#service">Servicios</a></li>
+                <li class=""><a href="#about">Sobre nosotros</a></li>
+                <li class=""><a href="#testimonial">Testimonios</a></li>
+                <li class=""><a href="#contact">Contacto</a></li>
               </ul>
             </div>
           </div>
@@ -51,12 +51,12 @@
         <div class="row">
           <div class="banner-info">
             <div class="banner-logo text-center">
-              <img src="img/logo2.png" class="img-responsive">
+              <img src="img/logo1.png" class="img-responsive">
             </div>
             <div class="banner-text text-center">
-              <h1 class="white">Healthcare at your desk!!</h1>
+              <h1 class="white">Generador de historias clínicas dentales</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br>tempor incididunt ut labore et dolore magna aliqua.</p>
-              <a href="#contact" class="btn btn-appoint">Make an Appointment.</a>
+              <a href="#contact" class="btn btn-appoint">Haz una cita.</a>
             </div>
             <div class="overlay-detail text-center">
               <a href="#service"><i class="fa fa-angle-down"></i></a>
@@ -72,7 +72,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 col-sm-4">
-          <h2 class="ser-title">Our Service</h2>
+          <h2 class="ser-title">Nuestros Servicios</h2>
           <hr class="botm-line">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris cillum.</p>
         </div>
@@ -82,8 +82,8 @@
               <i class="fa fa-stethoscope"></i>
             </div>
             <div class="icon-info">
-              <h4>24 Hour Support</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h4>Soporte siempre que lo necesites</h4>
+              <p>¿Tienes alguna duda? Contáctanos, manda mensaje al 49277777, manda correo al dentaclicksupport@gmail.com o visita las <a>preguntas más frecuentes</a>.</p>
             </div>
           </div>
           <div class="service-info">
