Cambios al banner superior

--- a/HistoriaClinicaPagina/Medilab/index.html
+++ b/HistoriaClinicaPagina/Medilab/index.html
@@ -40,8 +40,9 @@
                 <li class="active"><a href="#banner">Home</a></li>
                 <li class=""><a href="#service">Servicios</a></li>
                 <li class=""><a href="#about">Sobre nosotros</a></li>
-                <li class=""><a href="#testimonial">Testimonios</a></li>
+                <li class=""><a href="#testimonial">Precios</a></li>
                 <li class=""><a href="#contact">Contacto</a></li>
+                <li class=""><a href="login.html">Ingresa</a></li>
               </ul>
             </div>
           </div>
